--- a/_config.yml
+++ b/_config.yml
@@ -108,6 +108,7 @@ sidebars:
 - mvcwf_sidebar
 - winwf_sidebar
 - codeenv_sidebar
+- dbwf_sidebar
 - other
 
 description: "Intended as a documentation theme based on Jekyll for technical writers documenting software and other technical products, this theme has all the elements you would need to handle multiple products with both multi-level sidebar navigation, tags, and other documentation features."
